--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -2,7 +2,7 @@
 
     <!-- pic screen -->
     <div class="screen col-sm-12 col-md-8 col-lg-6">
-        <h1 id="whattoeat" class="pt2-2 fontheavy font3">What to eat today?</h1>
+        <h1 id="whattoeat" class="pt2-2 fontheavy font3 animate__animated animate__pulse animate__infinite animate__slow">What to eat today?</h1>
         <video id="screenvideo" src="bg2.mp4"></video>
 
 
