--- a/views/mypage.handlebars
+++ b/views/mypage.handlebars
@@ -1,13 +1,13 @@
 <div class="center">
 <div class="book roundborder cotainer-fluid row" id="mypagebox">
-    <h1 class="p-4 grey">Hi {{user_name}}!</h1>
+    <h1 class="py-5 white bigtitle fontheavy animate__animated animate__pulse animate__infinite animate__slow">Hi  {{user_name}}</h1>
 
 
-    <h3 class="pb-4 fontheavy">My recipes</h3>
+    <h2 class="py-2 fontheavy font2">My recipes</h2>
 
 
     {{#each recipe}}
-    <div class="cotainer-fluid mypagerecipe roundborder row col-12">
+    <div class="cotainer-fluid mypagerecipe row col-12">
 
         {{!-- image side --}}
         <div class="col-sm-12 col-md-6">
@@ -75,10 +75,10 @@
 
 
 
-    <h3 class="pb-4 fontheavy">Favourites</h3>
+    <h2 class="py-2 fontheavy font2">Favourites</h2>
 
     {{#each favourite}}
-    <div class="cotainer-fluid mypagerecipe roundborder row col-12">
+    <div class="cotainer-fluid mypagerecipe row col-12">
 
         {{!-- image side --}}
         <div class="col-sm-12 col-md-6">
