--- a/views/recipe.handlebars
+++ b/views/recipe.handlebars
@@ -86,13 +86,13 @@
         </div>
 
         <div class="form-group" id="commentarea">
-            <input class="form-control" id="exampleFormControlTextarea1" />
+            <input class="form-control" id="exampleFormControlTextarea1" / placeholder="Click here to share your rating or thoughts">
         </div>
 
         <input class="hidden" type="radio" id="recipe_id" value="{{recipe_id}}" />
 
-        <button id="ice" name="submit" type="submit" class="cbtn btn btn-light hidden">Submit</button>
-        <button id="cancel" type="button" class="cbtn btn btn-light hidden">Cancel</button>
+        <button id="ice" name="submit" type="submit" class="cbtn btn btn-light hidden mb-2">Submit</button>
+        <button id="cancel" type="button" class="cbtn btn btn-light hidden mb-2">Cancel</button>
     </form>
 
 
