--- a/views/about.handlebars
+++ b/views/about.handlebars
@@ -31,12 +31,13 @@
         <br>
         <div class="row center col-12">
             <div class="row1_profile col-12">
-                <img src="alex.png" alt="a" class="profilepic">
+                <img src="alex.jpg" alt="a" class="profilepic">
             </div>
             <div class="row2_profile col-10">
                 <h1 class="font2">Alex Cheung</h1>
-                <h4 >
-                    <span class="white">" </span>Hi! I am Alex and I love foods and pocketmon!  <span class="white">"</span>
+                <h4>
+                    <span class="white">" </span>Hi! I am Alex and I love foods and pocketmon! <span
+                        class="white">"</span>
                 </h4>
             </div>
         </div>
@@ -51,7 +52,8 @@
             <div class="row2_profile col-10">
                 <h1 class="font2">Christine Chen</h1>
                 <h4>
-                     <span class="white">" </span>Hi! I am Christine and I also love foods and photography!<span class="white">"</span>
+                    <span class="white">" </span>Hi! I am Christine and I also love foods and photography!<span
+                        class="white">"</span>
                 </h4>
             </div>
         </div>
@@ -68,13 +70,33 @@
             <div class="row2_profile col-10">
                 <h1 class="font2">Pullip Lee</h1>
                 <h4>
-                   <span class="white">" </span> Hi! I am Pullip and I live to eat. I workout to eat more!<span class="white">"</span>
+                    <span class="white">" </span> Hi! I am Pullip and I live to eat. I workout to eat more!<span
+                        class="white">"</span>
                 </h4>
             </div>
             <br>
         </div>
 
-        <div class="row center"><i id="close" class="fas fa-chevron-up" style="font-size:2rem; padding-top: 3rem;"></i>
+           <br>
+
+            <div class="row center col-12">
+            <div class="row1_profile col-12">
+                <img src="grouppic.jpeg" alt="p" class="profilepic">
+            </div>
+
+            <div class="row2_profile col-10">
+                <h1 class="font2">OUR FIRST GROUP PIC!</h1>
+                <h4>
+                    <span class="white">" </span> LET'S EAT!<span
+                        class="white">"</span>
+                </h4>
+            </div>
+            <br>
+        </div>
+
+
+
+        <div class="pt-4 row center"><i id="close" class="fas fa-chevron-up" style="font-size:2rem; padding-top: 3rem;"></i>
         </div>
 
 
