--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,7 +1,7 @@
 <!-- sign up part -->
-<div class="signup">
+<div class="signup p-4">
     <br>
-    <h1 class="grey">Sign up</h1><br>
+    <h1 class="white fontheavy">Sign up</h1><br>
     <form action="/signup" method="post">
         <div class="form-group row">
             <label for="usernameInput" class="col-sm-2 col-form-label">Email</label>
@@ -29,19 +29,6 @@
             </div>
         </div>
 
-
-
-        <div class="form-group row">
-            <div class="col-sm-2">Do you want to recieve our email?</div>
-            <div class="col-sm-12">
-                <div class="form-check">
-                    <br><input class="form-check-input" type="checkbox" id="gridCheck1">
-                    <label class="form-check-label" for="gridCheck1">
-                        Yes, I want to receive email
-                    </label>
-                </div>
-            </div>
-        </div>
         <br><br>
         
            <div class="form-group row d-flex justify-content-center">
